# GUIVisionVMDriver

./: .gitignore  LLM_INSTRUCTIONS.md  Package.resolved  Package.swift  README.md
LLM_STATE/: plan-agent-tcp-service-replace-ssh.md  plan-vision-pipeline.md
LLM_STATE/ocr-accuracy/: backlog.md  plan.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  run.sh  session-log.md
LLM_STATE/vision-pipeline/: backlog.md  plan.md  prompt-reflect.md  prompt-triage.md  prompt-work.md  run.sh
Sources/GUIVisionAgentProtocol/: AgentFormatter.swift  UnifiedRole.swift
Sources/GUIVisionVMDriver/: GUIVisionVMDriver.swift
Sources/guivision-agent/: ActionCommands.swift  AgentCLI.swift  AgentServer.swift  HealthCommand.swift  InspectCommand.swift  JSONOutput.swift  QueryOptions.swift  WaitCommand.swift  (+5 more)
pipeline/: pyproject.toml
pipeline/common/: pyproject.toml
pipeline/common/src/pipeline_common/: __init__.py  ab_test.py  image_io.py  metrics.py  nms.py  pipeline_result.py  types.py
pipeline/common/tests/: test_ab_test.py  test_detection_types.py  test_image_io.py  test_metrics.py  test_nms.py  test_pipeline_result.py  test_types.py
pipeline/ocr/: pyproject.toml
pipeline/ocr/src/ocr_analyzer/: __init__.py  __main__.py  analyzer.py
pipeline/ocr/swift/: Package.swift
pipeline/ocr/swift/Sources/OCRAnalyzer/: OCRAnalyzerCLI.swift
pipeline/ocr/tests/: test_ocr_analyzer.py  test_ocr_integration.py
scripts/: README.md  test-integration.sh  vm-create-golden-linux.sh  vm-create-golden-macos.sh  vm-create-golden-windows.sh  vm-create-golden.sh  vm-start.sh  vm-stop.sh
(+110 files in other folders)
