[project]
name = "pipeline-ocr"
version = "0.1.0"
description = "OCR pipeline step — Apple Vision text recognition with Python wrapper"
requires-python = ">=3.11"
dependencies = [
    "pipeline-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocr_analyzer"]
